<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.GirisActivity">

    <TextView
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="150dp"
        android:text="@string/login"
        android:textColor="@color/secondary_text"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_input"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp" />
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/background_input"
        android:hint="@string/password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/giris"
        android:textColor="@color/white"
        android:textSize="13dp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary"
        app:cornerRadius="8dp"
        app:rippleColor="@color/primary" />

    <TextView
        android:id="@+id/textCreateNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="30dp"
        android:text="@string/hesapOluştur"
        android:textColor="@color/primary"
        android:textSize="13dp"
        android:textStyle="bold"/>
</LinearLayout>