<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.KayitActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:text="@string/kayit"
        android:textColor="@color/primary"
        android:textSize="30dp"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true"/>
        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:textColor="@color/primary"
            android:textSize="10dp" />
    </FrameLayout>
    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_input"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"/>
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_input"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"/>
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_input"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"/>
    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/background_input"
        android:hint="@string/confirm_password"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary"
            android:text="@string/kayit"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:backgroundTint="@color/primary"
            app:cornerRadius="8dp" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </FrameLayout>
    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/giris"
        android:textColor="@color/primary"
        android:textSize="13dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/bilgiler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp" ></TextView>







</LinearLayout>