<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingActivity">

    <FrameLayout
        android:id="@+id/layoutImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imageProfile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true" />

    </FrameLayout>
    <TextView
        android:id="@+id/kullanıcıAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kullanıcıAd"
        android:layout_marginLeft="@dimen/_80sdp"
        android:layout_marginTop="-55dp"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/primary"></TextView>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/primary"></View>
    <FrameLayout
        android:id="@+id/image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/pp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="@dimen/_120sdp"
            android:background="@drawable/background_image"
            android:scaleType="centerCrop"
            app:riv_oval="true"/>
        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="78dp"
            android:layout_gravity="center"
            android:text="@string/add_image"
            android:textColor="@color/primary"
            android:textSize="10dp" />
    </FrameLayout>
    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_input"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"/>
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_input"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"/>
    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_input"
        android:hint="@string/confirm_password"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/primary_text"
        android:textSize="13dp"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGuncelle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary"
            android:text="@string/güncelle"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:backgroundTint="@color/primary"
            app:cornerRadius="8dp" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSil"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary"
            android:text="@string/sil"
            android:textColor="@color/white"
            android:textSize="13dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:backgroundTint="@color/primary"
            app:cornerRadius="8dp" />
    </FrameLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginTop="35dp"
        android:background="@color/primary"></View>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/messageButton"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_baseline_message_24"
        android:visibility="visible"
        app:backgroundTint="@color/primary"></com.google.android.material.floatingactionbutton.FloatingActionButton>

    <View
        android:layout_width="3dp"
        android:layout_height="85dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="-62dp"
        android:background="@color/primary"></View>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingButton"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginLeft="@dimen/_135sdp"
        android:layout_marginTop="-79dp"
        android:src="@drawable/ic_baseline_settings_applications_24"
        android:visibility="visible"
        app:backgroundTint="@color/primary"></com.google.android.material.floatingactionbutton.FloatingActionButton>
    <View
        android:layout_width="3dp"
        android:layout_height="85dp"
        android:layout_marginLeft="275dp"
        android:layout_marginTop="-62dp"
        android:background="@color/primary"></View>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cıkısYapButton"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_marginLeft="@dimen/_245sdp"
        android:layout_marginTop="-79dp"
        android:src="@drawable/ic_baseline_exit_to_app_24"
        android:visibility="visible"
        app:backgroundTint="@color/primary"></com.google.android.material.floatingactionbutton.FloatingActionButton>


</LinearLayout>
